# orsomafo

./: CHANGE_LOG.md  Cargo.toml  README.md  cliff.toml
examples/: basic.rs  closure.rs  flexible.rs  meta.rs  meta_ref.rs  once.rs  propagate.rs  serialised.rs  string.rs  subscribers.rs  thread.rs  unsubscribe.rs
src/: builder.rs  closure_handler_wrapper.rs  dispatched_event.rs  event.rs  event_dispatcher.rs  event_listener.rs  handlers.rs  lib.rs  main.rs
