[package]
name = "orsomafo"
version = "0.3.3"
edition = "2021"
license = "MIT"
description = "Event dispatcher crate"
repository = "https://github.com/shiftrightonce/orsomafo"
rust-version = "1.70"
keywords = ["webdev", "web", "event", "event-dispatcher"]
categories = ["asynchronous", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
log = "0.4.19"
tokio = { version = "1.28.2", features = ["sync", "test-util", "macros"] }
futures = "0.3.27"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = { version = "1.0" }
chrono = "0.4.31"
ulid = { version = "1.0.0", features = ["serde", "rand", "std"] }

[dev-dependencies]
pretty_env_logger = "0.5.0"
tokio = { version = "1.28.2", features = [
  "sync",
  "test-util",
  "macros",
  "rt-multi-thread",
] }
