[package]
name = "orsomafo"
version = "0.3.7"
edition = "2021"
license = "MIT"
description = "Event dispatcher crate"
repository = "https://github.com/shiftrightonce/orsomafo"
rust-version = "1.70"
keywords = ["webdev", "web", "event", "event-dispatcher"]
categories = ["asynchronous", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
log = "0.4.20"
tokio = { version = "1.36", features = ["sync", "test-util", "macros"] }
futures = "0.3.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
chrono = "0.4"
ulid = { version = "1.1", features = ["serde", "rand", "std"] }

[dev-dependencies]
pretty_env_logger = "0.5"
tokio = { version = "1.36", features = [
  "sync",
  "test-util",
  "macros",
  "rt-multi-thread",
] }
