[package]
name = "orsomafo"
version = "0.5.0"
edition = "2021"
license = "MIT"
description = "Event dispatcher crate"
repository = "https://github.com/shiftrightonce/orsomafo"
rust-version = "1.70"
keywords = ["webdev", "web", "event", "event-dispatcher"]
categories = ["asynchronous", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.2.0"
log = "0.4.29"
tokio = { version = "1.48.0", features = ["sync", "test-util", "macros"] }
futures = "0.3.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.145" }
chrono = "0.4.42"
uuid = { version = "1.19.0", features = ["v7", "serde"] }
serde_core = "1.0.228"

[dev-dependencies]
pretty_env_logger = "0.5"
tokio = { version = "1.36", features = [
  "sync",
  "test-util",
  "macros",
  "rt-multi-thread",
] }
